--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Martin Stelmach
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Hi there, I'm Martin Stelmach! Welcome to my website</h1>
+	<p>I'm not really an interesting guy but if you care to <a href="/about">Read more about my life...</a>. I post blog posts sporatically so please do check that out.</p>
 </div><!-- /.blurb -->
