--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,9 @@
-
+---
+layout: default
+title: Martin Stelmach
+---
+<div class="blurb">
+	<h1>About me!</h1>
+	<p>If you are someone other my mom reading this then welcome. My name is Martin Stelmach and I am a Master of Computational Sciences and Engineering Candidate at McMaster Uninversirty.</p>
+  <p>I completed my undergrad at McMaster as well with a Bsc. in Mathematics and Statistics.</p>
+</div><!-- /.blurb -->
