--- a/CV/index.html
+++ b/CV/index.html
@@ -4,5 +4,6 @@ title: Martin Stelmach
 ---
 <div class="blurb">
 	<h1>Resume slash CV</h1>
+	<a href="../files/Martin Stelmach Resume 2019.pdf"> resume </a>
 	<p>I am trying to figure out how to upload a pdf document so bear with me.</p>
 </div><!-- /.blurb -->
